# UndergraduateThesis

./: CMakeLists.txt  README.md  bluetooth.c  blufi_security.c  bme280.c  gpio_intr.c  main.c  partitions.csv  timers.c  wifi.c
components/bme280/: CMakeLists.txt  bme280.c  component.mk
components/bme280/include/: bme280.h
include/: bluetooth.h  bme280.h  gpio_intr.h  main.h  memory.h  misc.h  tasks.h  tft.h  tftspi.h  timers.h  wifi.h
srcs/: bluetooth.c  blufi_security.c  gpio_intr.c  memory.c  misc.c  tasks.c  tft.c  tftspi.c  timers.c  wifi.c
